# Tiresias

./: .gitignore  README.md  build.py  pyproject.toml  tiresias.spec
AppDir/: .DirIcon  AppRun  tiresias.desktop
mod/: factiva.py
spec/: tiresias.spec
tiresias/: main.py
views/: factiva.py
views/conversions/: convert_encode_decode.py  convert_tiresias_to_gargantext.py
