[tool.poetry]
name = "tiresias"
version = "0.1.0"
description = ""
authors = ["Jackson Severino da Rocha <jackson.rocha@prefi.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandas = "^2.2.3"
beautifulsoup4 = "^4.13.3"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "tiresias.main:create_app"
build = "build:build"
